довел чат до рабочего состояния по старой схеме работы (I\O)

--- a/src/main/resources/fxml/client.fxml
+++ b/src/main/resources/fxml/client.fxml
@@ -13,7 +13,7 @@
 
     <HBox fx:id="upperPanel">
 
-        <TextField HBox.hgrow="ALWAYS" promptText="Логин" fx:id="loginfield"/>
+        <TextField HBox.hgrow="ALWAYS" promptText="Логин" fx:id="loginField"/>
         <PasswordField promptText="Пароль" fx:id="passwordField" onAction="#tryToAuth"/>
         <Button text="Авторизоваться" onAction="#tryToAuth" />
 
