--- a/client/src/main/resources/fxml/client.fxml
+++ b/client/src/main/resources/fxml/client.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ListView?>
 
-<VBox fx:controller="client.Controller"
+<VBox fx:controller="ru.chatNioMaven.client.Controller"
       xmlns:fx="http://javafx.com/fxml" alignment="center">
 
     <HBox fx:id="upperPanel">
