--- a/client/src/main/resources/fxml/client.fxml
+++ b/client/src/main/resources/fxml/client.fxml
@@ -11,19 +11,19 @@
 <VBox fx:controller="ru.chatNioMaven.client.Controller"
       xmlns:fx="http://javafx.com/fxml" alignment="center">
 
-    <HBox fx:id="upperPanel">
+    <!--<HBox fx:id="upperPanel">-->
 
-        <TextField HBox.hgrow="ALWAYS" promptText="Логин" fx:id="loginField"/>
-        <PasswordField promptText="Пароль" fx:id="passwordField" onAction="#tryToAuth"/>
-        <Button text="Авторизоваться" onAction="#tryToAuth" />
+        <!--<TextField HBox.hgrow="ALWAYS" promptText="Логин" fx:id="loginField"/>-->
+        <!--<PasswordField promptText="Пароль" fx:id="passwordField" onAction="#tryToAuth"/>-->
+        <!--<Button text="Авторизоваться" onAction="#tryToAuth" />-->
 
-    </HBox>
+    <!--</HBox>-->
 
 
     <HBox VBox.vgrow="ALWAYS">
         <VBox HBox.hgrow="ALWAYS">
             <TextArea fx:id="chatArea" editable="false" VBox.vgrow="ALWAYS"/>
-            <HBox fx:id="bottomPanel" managed="false" visible="false">
+            <HBox fx:id="bottomPanel" managed="true" visible="true">
 
                 <TextField fx:id="msgField" HBox.hgrow="ALWAYS" promptText="Введите сообщение..." onAction="#sendMsg"/>
                 <Button text="Отправить" onAction="#sendMsg"/>
